--- a/RIFF.Console/packages.config
+++ b/RIFF.Console/packages.config
@@ -1,5 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net462" />
-  <package id="Microsoft.Net.Compilers" version="2.3.1" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.7.0" targetFramework="net462" developmentDependency="true" />
+  <package id="System.Net.Http" version="4.3.3" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net462" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.2" targetFramework="net462" />
 </packages>
