--- a/RIFF.Tests/packages.config
+++ b/RIFF.Tests/packages.config
@@ -2,14 +2,15 @@
 <packages>
   <package id="log4net" version="2.0.8" targetFramework="net462" />
   <package id="Microsoft.DotNet.InternalAbstractions" version="1.0.0" targetFramework="net462" />
-  <package id="Microsoft.Net.Compilers" version="2.3.1" targetFramework="net462" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.7.0" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.VisualStudio.TestPlatform.ObjectModel" version="14.0.0" targetFramework="net462" />
   <package id="Unofficial.Microsoft.SQLServer.SMO.2014" version="12.0.2000.8" targetFramework="net462" />
-  <package id="xunit" version="2.2.0" targetFramework="net462" />
+  <package id="xunit" version="2.3.1" targetFramework="net462" />
   <package id="xunit.abstractions" version="2.0.1" targetFramework="net462" />
-  <package id="xunit.assert" version="2.2.0" targetFramework="net462" />
-  <package id="xunit.core" version="2.2.0" targetFramework="net462" />
-  <package id="xunit.extensibility.core" version="2.2.0" targetFramework="net462" />
-  <package id="xunit.extensibility.execution" version="2.2.0" targetFramework="net462" />
-  <package id="xunit.runner.visualstudio" version="2.2.0" targetFramework="net462" developmentDependency="true" />
+  <package id="xunit.analyzers" version="0.8.0" targetFramework="net462" />
+  <package id="xunit.assert" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.core" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.extensibility.core" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.extensibility.execution" version="2.3.1" targetFramework="net462" />
+  <package id="xunit.runner.visualstudio" version="2.3.1" targetFramework="net462" developmentDependency="true" />
 </packages>
